<resources>
    <string name="app_name">Republic</string>

    <!-- Fonts -->
    <string translatable="false" name="roboto_regular">sans-serif</string>
    <string translatable="false" name="roboto_light">sans-serif-light</string>
    <string translatable="false" name="roboto_condensed">sans-serif-condensed</string>
    <string translatable="false" name="roboto_black">sans-serif-black</string>
    <string translatable="false" name="roboto_thin">sans-serif-thin</string>
    <string translatable="false" name="roboto_medium">sans-serif-medium</string>

    <!--Social-->
    <integer name="com_vk_sdk_AppId">6174625</integer>
    <string name="facebook_app_id" translatable="false">521892981483261</string>
    <string name="twitter_api_key">Ad7G6ftzhgKxRCMPw2k3c9RQY</string>
    <string name="twitter_api_secret">QLoBDB2Th84ZwKWi6uo7WjEuBhDqXmAOUardUAeMSHuw8Mff9w</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_places">Places</string>
    <string name="menu_tours">Tours</string>
    <string name="menu_transport_rent">Transport rent</string>
    <string name="menu_services">Services</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_share_us">Share us</string>
    <string name="menu_estimate">Estimate</string>
    <string name="menu_about">About</string>
    <string name="menu_write_us">Write us</string>
    <string name="menu_terms">Terms of use</string>
    <string name="navigation_login">Login</string>
    <string name="content_desc">Content description</string>
    <string name="reload">Reload</string>
    <string name="card_more_btn">More</string>
    <string name="card_add_history_button">Add History</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_surname_hint">Surname</string>
    <string name="profile_email_hint">Email</string>
    <string name="auth_toolbar_title">Login</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_confirm_password_hint">Confirm password</string>
    <string name="auth_register_btn">Sign in</string>
    <string name="auth_forgot_password_btn">Forgot password?</string>
    <string name="registr_auth_btn">Sign in</string>
    <string name="registr_forgot_password_btn">Forgot password?</string>
    <string name="repair_send_btn">Send</string>

    <string name="card_rent_bus">Rent buses and minibuses</string>
    <string name="card_rent_hotel">Check-in at the hotel</string>
    <string name="card_guide_services">Guide services</string>

    <string name="active_tour_status">"Status: Tour is Active"</string>
    <string name="completed_tour_status">"Status: Tour Completed"</string>

    <string name="card_nearest_tours_heading">Nearest tours</string>
    <string name="card_showplace_heading">Showplaces</string>

    <string name="make_tour">Make a tour</string>

    <string translatable="false" name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam justo lectus, sollicitudin a ipsum non, lacinia consectetur elit. Ut ut dolor eu est tincidunt gravida vel a ligula. Duis eget purus quis augue rutrum luctus sed non mi. Nam mauris quam, euismod ut commodo eu, ornare pulvinar ex. Vivamus ac massa ornare, tincidunt metus sed, semper nisl. Nam massa libero, imperdiet vel augue eget, finibus venenatis leo. Integer ultrices accumsan mi non feugiat. Fusce volutpat dui sit amet ornare tincidunt. Vestibulum nunc odio, molestie tincidunt aliquet et, aliquam nec leo. Integer gravida magna molestie tortor maximus eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed vestibulum, eros ultrices dignissim tempor, urna justo pretium est, eget placerat dolor massa et neque. Ut sollicitudin facilisis suscipit.</string>
    <string name="error_max_count">Можно добавлять не больше 6 фотографи</string>
    <string name="photo_picker_title">Выберите фотографии</string>
</resources>
