<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:checked="true"
            android:name="@string/menu_home"/>
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_menu_places"
            android:name="@string/menu_places"/>
        <item
            android:id="@+id/nav_tours"
            android:icon="@drawable/ic_menu_tours"
            android:name="@string/menu_tours"/>
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/ic_menu_transport"
            android:name="@string/menu_transport_rent"/>
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_services"
            android:name="@string/menu_services"/>
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_menu_history"
            android:name="@string/menu_stories"/>
    </group>

    <group android:id="@+id/additional_group"  android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:checkable="false"
            android:name="@string/menu_share_us"/>
        <item
            android:id="@+id/nav_estimate"
            android:icon="@drawable/ic_menu_estimate"
            android:checkable="false"
            android:name="@string/menu_estimate"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:checkable="false"
            android:name="@string/menu_about"/>

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:checkable="false"
            android:name="@string/menu_write_us"/>
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_menu_copyright"
            android:checkable="false"
            android:name="@string/menu_terms"/>
    </group>
</menu>