<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_container_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/user_photo_img_profile"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ui_appbar_light"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_profile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/auth_toolbar_title"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/auth_email_et"
                    style="@style/auth_et_style"
                    android:hint="@string/profile_email_hint"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/auth_password_et"
                    style="@style/auth_et_style"
                    android:hint="@string/auth_password_hint"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <!--//region Социальные кнопки и войти-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp">

                <Button
                    android:id="@+id/login_btn"
                    style="@style/CustomButton"
                    android:theme="@style/LoginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/navigation_login"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/vk_social_btn"
                        style="@style/SocialButtons"
                        android:background="@drawable/vk_selector_btn"
                        android:contentDescription="@string/app_name"/>

                    <ImageButton
                        android:id="@+id/twitter_social_btn"
                        style="@style/SocialButtons"
                        android:background="@drawable/twitter_selector_btn"
                        android:contentDescription="@string/app_name"/>

                    <ImageButton
                        android:id="@+id/fb_social_btn"
                        style="@style/SocialButtons"
                        android:background="@drawable/fb_selector_btn"
                        android:contentDescription="@string/app_name"/>

                </LinearLayout>
            </RelativeLayout>
            <!--//endregion-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/auth_registration_btn"
                    style="@style/CustomButton"
                    android:theme="@style/BorderlessBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_register_btn"
                    android:textAllCaps="false"
                    android:layout_alignParentStart="true"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/auth_forgot_btn"
                    style="@style/CustomButton"
                    android:theme="@style/BorderlessBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_forgot_password_btn"
                    android:textAllCaps="false"
                    android:layout_gravity="end"
                    android:layout_alignParentEnd="true"
                    android:textSize="14sp"/>
            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>